--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,14 @@ node_js: stable
 
 install:
   - npm install -g vuepress
+  - npm install
 
 before_script:
   - npm config set registry https://registry.npmjs.org/
   - set -e
 script:
   # 生成静态文件
-  - yarn build
+  - npm run build
 after_script:
   # 进入生成的文件夹
   - cd docs/.vuepress/dist
