--- a/package.json
+++ b/package.json
@@ -1,9 +1,4 @@
 {
-  "devDependencies": {
-    "@vuepress/plugin-blog": "^1.2.4",
-    "@vuepress/theme-blog": "^1.2.3",
-    "vuepress": "^1.0.3"
-  },
   "scripts": {
     "start": "vuepress dev docs",
     "build": "vuepress build docs",
@@ -17,6 +12,9 @@
     "doc": "docs"
   },
   "dependencies": {
+    "@vuepress/plugin-blog": "^1.2.4",
+    "@vuepress/theme-blog": "^1.2.3",
+    "vuepress": "^1.0.3",
     "abbrev": "^1.1.1",
     "accepts": "^1.3.7",
     "acorn": "^6.3.0",
