--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,12 @@
 language: node_js
-
-node_js: stable
-
-install:
-  - npm config set registry https://registry.npmjs.org/
-  - npm install -g vuepress
-  - npm install
-
-before_script:
-  - set -e
+sudo: required
+node_js:
+  - 8.11.3
+branch: master
+cache:
+  directories:
+    - node_modules
+before_install:
+  - export TZ='Asia/Shanghai'  # 设置时区
 script:
-  # 生成静态文件
-  - vuepress build docs
-after_script:
-  # 进入生成的文件夹
-  - cd docs/.vuepress/dist
-
-  # 如果是发布到自定义域名
-  - echo 'blog.volc.top' > CNAME
-  - git init
-  - git config user.name "lemon" # 修改name
-  - git config user.email "liucannn@sina.com" # 修改email
-  - git add .
-  - git commit -m "Travis CI Auto Builder"
-  - git push --force --quiet "https://${GITHUB_ACCESS_TOKEN}@github.com/volcanoliuc/volcanoliuc.github.io.git" master:master
-branches:
-  only:
-    - master
-
+  - ./build.sh
