--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,23 @@ cache:
 before_install:
   - export TZ='Asia/Shanghai'  # 设置时区
 script:
-  - ./build.sh
+# 确保脚本抛出遇到的错误
+  - set -e
+
+# 生成静态文件
+  - npm run build
+
+# 进入生成的文件夹
+  - cd docs/.vuepress/dist
+
+# 如果是发布到自定义域名
+  - echo 'blog.volc.top' > CNAME
+
+  - git init
+  - git add -A
+  - git commit -m 'deploy'
+
+# 如果发布到 https://<USERNAME>.github.io
+  - git push -f ${access_token}@github.com:volcanoliuc/volcanoliuc.github.io.git master
+
+  - cd -
