--- a/.travis.yml
+++ b/.travis.yml
@@ -1,31 +1,25 @@
-language: node_js
-sudo: required
-node_js:
-  - 8.11.3
-branch: master
-cache:
-  directories:
-    - node_modules
-before_install:
-  - export TZ='Asia/Shanghai'  # 设置时区
-script:
+#!/usr/bin/env sh
+
 # 确保脚本抛出遇到的错误
-  - set -e
+set -e
 
 # 生成静态文件
-  - npm run build
+npm run docs:build
 
 # 进入生成的文件夹
-  - cd docs/.vuepress/dist
+cd docs/.vuepress/dist
 
 # 如果是发布到自定义域名
-  - echo 'blog.volc.top' > CNAME
+# echo 'www.example.com' > CNAME
 
-  - git init
-  - git add -A
-  - git commit -m 'deploy'
+git init
+git add -A
+git commit -m 'deploy'
 
 # 如果发布到 https://<USERNAME>.github.io
-  - git push -f ${access_token}@github.com:volcanoliuc/volcanoliuc.github.io.git master
+git push -f git@github.com:lemon-lc/lemon-lc.github.io.git master
 
-  - cd -
+# 如果发布到 https://<USERNAME>.github.io/<REPO>
+# git push -f git@github.com:<USERNAME>/<REPO>.git master:gh-pages
+
+cd -
