--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,16 @@
-#!/usr/bin/env sh
+language: node_js
 
-# 确保脚本抛出遇到的错误
-set -e
+node_js: stable
 
-# 生成静态文件
-npm run docs:build
+install:
+  - npm install
 
-# 进入生成的文件夹
-cd docs/.vuepress/dist
+# before_script:
+#   - git config user.email "liucannn@sina.com"
+#   - sed -i'' "s~https://github.com/volcanoliuc/volcanoliuc.github.io.git~https://${GITHUB_ACCESS_TOKEN}@github.com/volcanoliuc/volcanoliuc.github.io.git~" _config.yml
+script:
+  - sh build.sh
+branches:
+  only:
+    - master
 
-# 如果是发布到自定义域名
-# echo 'www.example.com' > CNAME
-
-git init
-git add -A
-git commit -m 'deploy'
-
-# 如果发布到 https://<USERNAME>.github.io
-git push -f git@github.com:lemon-lc/lemon-lc.github.io.git master
-
-# 如果发布到 https://<USERNAME>.github.io/<REPO>
-# git push -f git@github.com:<USERNAME>/<REPO>.git master:gh-pages
-
-cd -
