--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: node_js
 node_js: stable
 
 install:
-  - npm install
+  - yarn install
 
 # before_script:
 #   - git config user.email "liucannn@sina.com"
