--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "build": "vuepress build docs",
     "deploy": "sh deploy.sh"
   },
-  "name": "vue-blog",
+  "name": "blog",
   "description": "blog",
   "version": "1.0.0",
   "main": "index.js",
