--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,9 @@ language: node_js
 
 node_js: stable
 
-install:
-  - npm install
-
-# before_script:
-#   - git config user.email "liucannn@sina.com"
-#   - sed -i'' "s~https://github.com/volcanoliuc/volcanoliuc.github.io.git~https://${GITHUB_ACCESS_TOKEN}@github.com/volcanoliuc/volcanoliuc.github.io.git~" _config.yml
 script:
-  - sh build.sh
+  - build.sh
+
 branches:
   only:
     - master
